BUG: fix double border in deprecated box

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,7 +16,7 @@ $container-max-widths: (
 @import './admonitions';
 
 // Custom css, TODO: to be refactored in different partials
-.deprecated {
+div.deprecated {
   margin-bottom: 10px;
   margin-top: 10px;
   padding: 7px;
